--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>Проблема технологических зависимостей</title>
-      <link rel="stylesheet" href="{{rath_css}}">
+      <link rel="stylesheet" href="{{path_css}}">
    </head>
    <body>
       <a href="/calc">Калькулятор</a>
